--- a/dbprep1assign.html
+++ b/dbprep1assign.html
@@ -28,24 +28,27 @@
   
   <type>input your adress</type><br>
   <label for="house number">house number:</label>
-  <input type="text" id="house number" name="house number"><br><br>
-  <label for="adress line 1">house number:</label>
-  <input type="text" id="house number" name="house number"><br><br>
-  <label for="adress line 2">house number:</label>
-  <input type="text" id="house number" name="house number"><br><br>
-  <label for="city">house number:</label>
-  <input type="text" id="house number" name="house number"><br><br>
-  <label for="country">house number:</label>
-  <input type="text" id="house number" name="house number"><br><br>
-  <label for="postcode">house number:</label>
-  <input type="text" id="house number" name="house number"><br><br>
-  <label for="contact number">house number:</label>
-  <input type="text" id="house number" name="house number"><br><br>
+  <input type="text" id="house number" name="house number"><br>
+
+  <label for="adress line 1">adress line 1:</label>
+  <input type="text" id="adress line 1" name="adress line 1"><br>
+
+  <label for="adress line 2">adress line 2:</label>
+  <input type="text" id="adress line 2" name="adress line 2"><br>
+
+  <label for="city">city:</label>
+  <input type="text" id="city" name="city"><br>
+
+  <label for="country">country:</label>
+  <input type="text" id="country" name="country"><br>
+
+  <label for="postcode">postcode:</label>
+  <input type="text" id="postcode" name="postcode"><br>
+
+  <label for="contact number">contact number:</label>
+  <input type="text" id="contact number" name="contact number"><br>
   
   <br><br><input type="submit" value="Submit"><br>
-
-
-
 
 </form>
 </body>
